Adhese Vast for Javascript/HTML5 - Changes

2013/06/12	
First commit. Only linear ads are currently supported. Time tracking events are available, but Trackers are not yet parsed from XML.
Click event is available but does not track yet. 