@@ -1,5 +1,8 @@
 Adhese Vast for Javascript/HTML5 - Changes
 
+2013/06/14
+Added tracker parsing from XML. Added click handling and tracking.
+
 2013/06/12	
 First commit. Only linear ads are currently supported. Time tracking events are available, but Trackers are not yet parsed from XML.
 Click event is available but does not track yet. 
